@@ -1,3 +1,13 @@
+2019-01-25  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: REGRESSION (r237808): offscreen path warning doesn't work
+        https://bugs.webkit.org/show_bug.cgi?id=193830
+
+        Reviewed by Matt Baker.
+
+        * UserInterface/Models/RecordingAction.js:
+        (WI.RecordingAction.prototype.process):
+
 2019-01-25  Joseph Pecoraro  <pecoraro@apple.com>
 
         Web Inspector: Add another Protocol Version (iOS 12.2)
